[package]
name = "dock_inspector_egui"
version = "0.15.1"
edition = "2024"
authors = ["AllenPocketGamer@Gmail.com"]
description = "A Bevy plugin that provides a dockable inspector for debugging."
homepage = "https://github.com/AllenPocketGamer/slime-ecobox"
keywords = ["bevy", "plugin", "material"]
categories = ["game-engines", "graphics", "rendering"]

[dependencies]
bevy = "0.15.1"
bevy_egui = "0.31.0"
egui_dock = "0.14.0"
bevy-inspector-egui = "0.28.1"

[dev-dependencies]
bevy_panorbit_camera = { version = "0.21.*", features = ["bevy_egui"] }
